variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:3: error: ')' expected but '=' found.
while((2*nbBis!)=(caseOrange+1)){
                ^RunHalf:3: error: illegal start of simple expression
while((2*nbBis!)=(caseOrange+1)){
                               ^